--- a/src/pages/services/range-repair.astro
+++ b/src/pages/services/range-repair.astro
@@ -525,8 +525,8 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/panasonic.webp"
-                      alt="Panasonic"
+                      src="/brand-logos/GE-general-electric.webp"
+                      alt="General Electric"
                     />
                   </a>
                 </div>
@@ -534,7 +534,7 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-2">
                   <a href="#">
                     <img
-                      width="370px"
+                      width="300px"
                       height="300px"
                       src="/brand-logos/samsung.webp"
                       alt="samsung"
@@ -545,10 +545,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-3">
                   <a href="#">
                     <img
-                      width="230px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/GE-general-electric.webp"
-                      alt="GE general electric"
+                      src="/brand-logos/whirlpool.webp"
+                      alt="Whirlpool"
                     />
                   </a>
                 </div>
@@ -556,7 +556,7 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-4">
                   <a href="#">
                     <img
-                      width="240px"
+                      width="300px"
                       height="300px"
                       src="/brand-logos/lg.webp"
                       alt="LG"
@@ -567,10 +567,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-5">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/sharp.webp"
-                      alt="Sharp"
+                      src="/brand-logos/maytag.webp"
+                      alt="Maytag"
                     />
                   </a>
                 </div>
@@ -580,8 +580,8 @@ import "css/service/style_services.css";
                     <img
                       width="300px"
                       height="300px"
-                      src="/brand-logos/whirlpool.webp"
-                      alt="Whirlpool"
+                      src="/brand-logos/frigidaire.webp"
+                      alt="Frigidaire"
                     />
                   </a>
                 </div>
@@ -589,10 +589,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-7">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/breville.webp"
-                      alt="Sharp"
+                      src="/brand-logos/bosch.webp"
+                      alt="Bosch"
                     />
                   </a>
                 </div>
@@ -600,10 +600,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-8">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/thermador.webp"
-                      alt="Sharp"
+                      src="/brand-logos/kitchenAid.webp"
+                      alt="KitchenAid"
                     />
                   </a>
                 </div>
@@ -611,10 +611,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-9">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/toshiba.webp"
-                      alt="Sharp"
+                      src="/brand-logos/amana.webp"
+                      alt="Amana"
                     />
                   </a>
                 </div>
@@ -622,10 +622,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-10">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/frigidaire.webp"
-                      alt="Sharp"
+                      src="/brand-logos/kenmore.webp"
+                      alt="Kenmore"
                     />
                   </a>
                 </div>
@@ -633,10 +633,10 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-11">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/cove.webp"
-                      alt="Sharp"
+                      src="/brand-logos/thermador.webp"
+                      alt="Thermador"
                     />
                   </a>
                 </div>
@@ -644,20 +644,110 @@ import "css/service/style_services.css";
                 <div class="logo-brand logo-bran-ph-12">
                   <a href="#">
                     <img
-                      width="290px"
+                      width="300px"
                       height="300px"
-                      src="/brand-logos/kitchenAid.webp"
-                      alt="Sharp"
+                      src="/brand-logos/electrolux.webp"
+                      alt="Electrolux"
                     />
                   </a>
                 </div>
+
+                <div class="logo-brand logo-bran-ph-13">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/viking.webp"
+                      alt="Viking"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-14">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/jennAir.webp"
+                      alt="Jenn-Air"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-15">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/wolf.webp"
+                      alt="Wolf"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-16">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/dacor.webp"
+                      alt="Dacor"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-17">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/hotpoint.webp"
+                      alt="Hotpoint"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-18">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/fisher-paykel.webp"
+                      alt="Fisher & Paykel"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-19">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/sub-zero.webp"
+                      alt="Sub-Zero"
+                    />
+                  </a>
+                </div>
+
+                <div class="logo-brand logo-bran-ph-20">
+                  <a href="#">
+                    <img
+                      width="300px"
+                      height="300px"
+                      src="/brand-logos/miele.webp"
+                      alt="Miele"
+                    />
+                  </a>
+                </div>
+
+
               </div>
 
               <div class="full-desc-logo-brand">
                 <p>Brands of microwaves we repair</p>
 
                 <div class="desc-logo-brand logo-bran-d-1">
-                  <h3><a href="#">Panasonic</a></h3>
+                  <h3><a href="#">General Electric</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-2">
@@ -665,7 +755,7 @@ import "css/service/style_services.css";
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-3">
-                  <h3><a href="#">GE Appliances</a></h3>
+                  <h3><a href="#">Whirlpool</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-4">
@@ -673,36 +763,70 @@ import "css/service/style_services.css";
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-5">
-                  <h3><a href="#">Sharp</a></h3>
+                  <h3><a href="#">Maytag</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-6">
-                  <h3><a href="#">Whirlpool</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-7">
-                  <h3><a href="#">Breville</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-8">
-                  <h3><a href="#">Thermador</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-9">
-                  <h3><a href="#">Toshiba</a></h3>
-                </div>
-
-                <div class="desc-logo-brand logo-bran-d-10">
                   <h3><a href="#">Frigidaire</a></h3>
                 </div>
 
+                <div class="desc-logo-brand logo-bran-d-7">
+                  <h3><a href="#">Bosch</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-8">
+                  <h3><a href="#">KitchenAid</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-9">
+                  <h3><a href="#">Amana</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-10">
+                  <h3><a href="#">Kenmore</a></h3>
+                </div>
+
                 <div class="desc-logo-brand logo-bran-d-11">
-                  <h3><a href="#">Сove</a></h3>
+                  <h3><a href="#">Thermador</a></h3>
                 </div>
 
                 <div class="desc-logo-brand logo-bran-d-12">
-                  <h3><a href="#">KitchenAid</a></h3>
+                  <h3><a href="#">Electrolux</a></h3>
                 </div>
+
+                <div class="desc-logo-brand logo-bran-d-13">
+                  <h3><a href="#">Viking</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-14">
+                  <h3><a href="#">Jenn-Air</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-15">
+                  <h3><a href="#">Wolf</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-16">
+                  <h3><a href="#">Dacor</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-17">
+                  <h3><a href="#">Hotpoint</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-18">
+                  <h3><a href="#">Fisher & Paykel</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-19">
+                  <h3><a href="#">Sub-Zero</a></h3>
+                </div>
+
+                <div class="desc-logo-brand logo-bran-d-20">
+                  <h3><a href="#">Miele</a></h3>
+                </div>
+
+
               </div>
             </div>
 
