--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -151,6 +151,14 @@ const menuitems = [
         path: "/price-list/water-heater-repair-cost",
       },
       {
+        title: "Air Conditioner Repair Cost",
+        path: "/price-list/air-conditioner-repair-cost",
+      },
+      {
+        title: "Heat Pump Repair Cost",
+        path: "/price-list/heat-pump-repair-cost",
+      },
+      {
         title: "Commercial Refrigerator Repair Cost",
         path: "/price-list/commercial-refrigerator-repair-cost",
       },
