--- a/src/pages/price-list/heat-pump-repair-cost.astro
+++ b/src/pages/price-list/heat-pump-repair-cost.astro
@@ -78,7 +78,7 @@ import "css/price/style_price.css";
             dedicated to helping you and making sure you're happy.
           </p>
 
-          <h2>How Much Does It Cost To Repair a Commercial Heat Pump?</h2>
+          <h2>How Much Does It Cost To Repair a Heat Pump?</h2>
           <p>
             The typical cost to repair a heat pump varies from $100 to $1200,
             including parts and labor. The price can vary based on the issue
@@ -480,7 +480,7 @@ import "css/price/style_price.css";
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-a">
             <h2>Heat Pump Replacement Parts Cost</h2>
-            <p>Sure, here's a list of common heat pump replacement parts, along with their estimated costs and descriptions</p>
+            <p>Here's a list of common heat pump replacement parts, along with their estimated costs and descriptions</p>
           </div>
 
           <div class="head_pricing-policy_foto-b">
