--- a/src/pages/price-list/heat-pump-repair-cost.astro
+++ b/src/pages/price-list/heat-pump-repair-cost.astro
@@ -42,10 +42,10 @@ import "css/price/style_price.css";
         <div class="col-one">
           <img
             loading="lazy"
-            width="500px"
+            width="400px"
             height="500px"
-            src="/commercial-wine-cooler/commercial-wine-cooler-1.webp"
-            alt="Commercial wine cooler repair cost"
+            src="/heat-pump/1-heat-pump.webp"
+            alt="Heat Pump Repair Cost"
           />
 
           <Contactbtn />
@@ -105,8 +105,8 @@ import "css/price/style_price.css";
               loading="lazy"
               width="500px"
               height="500px"
-              src="/commercial-wine-cooler/commercial-wine-cooler-2.webp"
-              alt="Commercial wine cooler repair cost near me"
+             src="/heat-pump/2-heat-pump.webp"
+              alt="Heat Pump Repair Cost near me"
             />
           </div>
         </div>
@@ -335,10 +335,10 @@ import "css/price/style_price.css";
           <div class="head_pricing-policy_foto-b">
             <img
               loading="lazy"
-              width="600px"
+              width="500px"
               height="500px"
-              src="/commercial-wine-cooler/commercial-wine-cooler-3.webp"
-              alt="Commercial wine cooler repair cost Los Angeles"
+              src="/heat-pump/3-heat-pump.webp"
+              alt="Heat Pump Repair Cost Los Angeles"
             />
           </div>
 
@@ -488,8 +488,8 @@ import "css/price/style_price.css";
               loading="lazy"
               width="500px"
               height="500px"
-              src="/commercial-wine-cooler/commercial-wine-cooler-4.webp"
-              alt="Commercial wine cooler repair cost estimator"
+              src="/heat-pump/4-heat-pump.webp"
+              alt="Heat Pump Repair Cost estimator"
             />
           </div>
         </div>
@@ -661,8 +661,8 @@ import "css/price/style_price.css";
               loading="lazy"
               width="600px"
               height="500px"
-              src="/commercial-wine-cooler/commercial-wine-cooler-5.webp"
-              alt="Commercial wine cooler repair labor cost"
+              src="/heat-pump/5-heat-pump.webp"
+              alt="Heat Pump Repair Cost labor cost"
             />
           </div>
 
@@ -764,8 +764,8 @@ import "css/price/style_price.css";
             loading="lazy"
             width="500px"
             height="800px"
-            src="/commercial-wine-cooler/commercial-wine-cooler-6.webp"
-            alt="Commercial wine cooler repair parts cost"
+            src="/heat-pump/6-heat-pump.webp"
+            alt="Heat Pump Repair Cost parts cost"
           />
         </div>
 
