--- a/src/pages/price-list/air-conditioner-repair-cost.astro
+++ b/src/pages/price-list/air-conditioner-repair-cost.astro
@@ -44,8 +44,8 @@ import "css/price/style_price.css";
             loading="lazy"
             width="500px"
             height="500px"
-            src="/commercial-wine-cooler/commercial-wine-cooler-1.webp"
-            alt="Commercial wine cooler repair cost"
+            src="/air-conditioner/1-air-conditioner.webp"
+            alt="Air Conditioner Repair Cost"
           />
 
           <Contactbtn />
@@ -107,8 +107,8 @@ import "css/price/style_price.css";
               loading="lazy"
               width="500px"
               height="500px"
-              src="/commercial-wine-cooler/commercial-wine-cooler-2.webp"
-              alt="Commercial wine cooler repair cost near me"
+              src="/air-conditioner/2-air-conditioner.webp"
+              alt="Air Conditioner Repair Cost near me"
             />
           </div>
         </div>
@@ -337,10 +337,10 @@ import "css/price/style_price.css";
           <div class="head_pricing-policy_foto-b">
             <img
               loading="lazy"
-              width="600px"
+              width="500px"
               height="500px"
-              src="/commercial-wine-cooler/commercial-wine-cooler-3.webp"
-              alt="Commercial wine cooler repair cost Los Angeles"
+              src="/air-conditioner/3-air-conditioner.webp"
+              alt="Air Conditioner Repair Cost Los Angeles"
             />
           </div>
 
@@ -497,8 +497,8 @@ import "css/price/style_price.css";
               loading="lazy"
               width="500px"
               height="500px"
-              src="/commercial-wine-cooler/commercial-wine-cooler-4.webp"
-              alt="Commercial wine cooler repair cost estimator"
+              src="/air-conditioner/4-air-conditioner.webp"
+              alt="Air Conditioner Repair Cost estimator"
             />
           </div>
         </div>
@@ -683,10 +683,10 @@ import "css/price/style_price.css";
           <div class="head_pricing-policy_foto-b">
             <img
               loading="lazy"
-              width="600px"
+              width="400px"
               height="500px"
-              src="/commercial-wine-cooler/commercial-wine-cooler-5.webp"
-              alt="Commercial wine cooler repair labor cost"
+              src="/air-conditioner/5-air-conditioner.webp"
+              alt="Air Conditioner Repair labor cost"
             />
           </div>
 
@@ -826,8 +826,8 @@ import "css/price/style_price.css";
             loading="lazy"
             width="500px"
             height="800px"
-            src="/commercial-wine-cooler/commercial-wine-cooler-6.webp"
-            alt="Commercial wine cooler repair parts cost"
+            src="/air-conditioner/6-air-conditioner.webp"
+            alt="Air Conditioner Repair parts cost"
           />
         </div>
 
