--- a/src/pages/services/refrigerator-repair.astro
+++ b/src/pages/services/refrigerator-repair.astro
@@ -20,7 +20,7 @@ import "css/service/style_services.css";
   <Container>
     <main>
       <div class="page-header">
-        <div class="page-header-d-full dryer-page-header-d-full">
+        <div class="page-header-d-full">
           <div class="page-header-d">
             <h1><span class="animate-charcter">Refrigerator Repair</span></h1>
             <Contactbtn />
@@ -29,7 +29,7 @@ import "css/service/style_services.css";
 
         <div class="page-header-f">
           <img
-            src="/stove-repair/stove-page_header_photos.webp"
+            src="/freezer/freezer-page_header_photos.webp"
             alt="Refrigerator Repair"
             loading="lazy"
           />
@@ -1522,14 +1522,12 @@ import "css/service/style_services.css";
 
                   <div class="pros_pricing-policy">
                     <p>We always do our best to find parts at a lower price for our customers. We do not make extra money on the parts; our priority is to make it as easy as possible for the customer. </p>
+                    <p>By choosing Same Day Appliance Repair, you can trust that your refrigerator is in good hands. We aim to provide top-notch service and ensure your complete satisfaction. Give us a call today to schedule your repair or maintenance appointment!</p>
                   </div>
 
                 </div>
               </div>
 
-              <div class="content__page-desc">
-                <p>By choosing Same Day Appliance Repair, you can trust that your refrigerator is in good hands. We aim to provide top-notch service and ensure your complete satisfaction. Give us a call today to schedule your repair or maintenance appointment!</p>
-              </div>
             </div>
             <Btn />
           </div>
