--- a/src/pages/services/wine-cooler-repair.astro
+++ b/src/pages/services/wine-cooler-repair.astro
@@ -20,16 +20,16 @@ import "css/service/style_services.css";
   <Container>
     <main>
       <div class="page-header">
-        <div class="page-header-d-full">
+        <div class="page-header-d-full wine-cooler-page-header-d-full">
           <div class="page-header-d">
-            <h1><span class="animate-charcter">Wine Cooler Repair</span></h1>
+            <h1><span class="animate-charcter">Wine Cooler <br>Repair</span></h1>
             <Contactbtn />
           </div>
         </div>
 
         <div class="page-header-f">
           <img
-            src="/freezer/freezer-page_header_photos.webp"
+            src="/commercial-wine-cooler/wine-cooler-page_header_photos.webp"
             alt="Wine Cooler Repair"
             loading="lazy"
           />
