--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -90,13 +90,13 @@ main {
     padding-bottom: clamp(3%, 5vh, 10%);
 }
 
-.furnace-page-header-d-full .page-header-d {
+.furnace-page-header-d-full .page-header-d  {
     width: 45%;
 }
 
 .oven-page-header-d-full .page-header-d,
 .freezer-page-header-d-full .page-header-d,
-.dryer-page-header-d-full .page-header-d {
+.dryer-page-header-d-full .page-header-d, .wine-cooler-page-header-d-full .page-header-d {
     width: 38%;
 }
 
@@ -1511,7 +1511,18 @@ main {
 
 
 
+@media (max-width:1440px) {
+     .wine-cooler-page-header-d-full {
+        padding-top: clamp(5%, 8vh, 10%);
+        padding-bottom: clamp(3%, 5vh, 10%);
+    }
 
+    .wine-cooler-page-header-d-full .page-header-d {
+        width: 54%;
+    }
+
+
+}
 
 
 
@@ -1529,7 +1540,7 @@ main {
         padding: 5% 0;
     }
 
-    .washer-page-header-d-full {
+    .washer-page-header-d-full, .wine-cooler-page-header-d-full{
         padding-top: clamp(2%, 2vh, 10%);
         padding-bottom: clamp(1%, 2vh, 10%);
     }
