--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -90,13 +90,14 @@ main {
     padding-bottom: clamp(3%, 5vh, 10%);
 }
 
-.furnace-page-header-d-full .page-header-d  {
+.furnace-page-header-d-full .page-header-d {
     width: 45%;
 }
 
 .oven-page-header-d-full .page-header-d,
 .freezer-page-header-d-full .page-header-d,
-.dryer-page-header-d-full .page-header-d, .wine-cooler-page-header-d-full .page-header-d {
+.dryer-page-header-d-full .page-header-d,
+.wine-cooler-page-header-d-full .page-header-d {
     width: 38%;
 }
 
@@ -599,7 +600,13 @@ main {
 
 
 
-
+.table-content__page-desc b{
+    text-align: center;
+    width: 100%;
+    display: block;
+    font-size: 22px;
+    margin-top: 15px;
+}
 
 .costTable {
     max-width: 700px;
@@ -829,7 +836,7 @@ main {
 .logo-bran-d-17 a,
 .logo-bran-d-18 a,
 .logo-bran-d-19 a,
-.logo-bran-d-20 a, 
+.logo-bran-d-20 a,
 .logo-bran-d-21 a,
 .logo-bran-d-22 a,
 .logo-bran-d-23 a,
@@ -863,7 +870,7 @@ main {
 .logo-bran-d-17 a::before,
 .logo-bran-d-18 a::before,
 .logo-bran-d-19 a::before,
-.logo-bran-d-20 a::before, 
+.logo-bran-d-20 a::before,
 .logo-bran-d-21 a::before,
 .logo-bran-d-22 a::before,
 .logo-bran-d-23 a::before,
@@ -904,7 +911,7 @@ main {
 .logo-bran-d-17 a.hovered::before,
 .logo-bran-d-18 a.hovered::before,
 .logo-bran-d-19 a.hovered::before,
-.logo-bran-d-20 a.hovered::before, 
+.logo-bran-d-20 a.hovered::before,
 .logo-bran-d-21 a.hovered::before,
 .logo-bran-d-22 a.hovered::before,
 .logo-bran-d-23 a.hovered::before,
@@ -913,7 +920,7 @@ main {
 .logo-bran-d-26 a.hovered::before,
 .logo-bran-d-27 a.hovered::before,
 .logo-bran-d-28 a.hovered::before,
-.logo-bran-d-29 a.hovered::before, 
+.logo-bran-d-29 a.hovered::before,
 .logo-bran-d-30 a.hovered::before {
     width: 100%;
 }
@@ -1276,7 +1283,7 @@ main {
     font-size: clamp(16px, 4vw, 18px);
     margin: 0;
     font-weight: 500;
-    
+
 }
 
 .pros_pricing-policy-indent {
@@ -1512,7 +1519,7 @@ main {
 
 
 @media (max-width:1440px) {
-     .wine-cooler-page-header-d-full {
+    .wine-cooler-page-header-d-full {
         padding-top: clamp(5%, 8vh, 10%);
         padding-bottom: clamp(3%, 5vh, 10%);
     }
@@ -1540,7 +1547,8 @@ main {
         padding: 5% 0;
     }
 
-    .washer-page-header-d-full, .wine-cooler-page-header-d-full{
+    .washer-page-header-d-full,
+    .wine-cooler-page-header-d-full {
         padding-top: clamp(2%, 2vh, 10%);
         padding-bottom: clamp(1%, 2vh, 10%);
     }
